<resources>
    <string name="app_name">WorkIt</string>
    <string name="dettaglio">Detail</string>
    <string name="cronologia">Cronology</string>
    <string name="report">Report</string>
    <string name="name">Name</string>
    <string name="show_message">Show Message</string>
    <string name="dummy_data">Tuesday 30 May</string>
    <string name="entrata">Get In</string>
    <string name="pausa">Pause</string>
    <string name="uscita">Get Out</string>
    <string name="dummy_in">9:00</string>
    <string name="dummy_pause">1 hour</string>
    <string name="dummy_out">18:00</string>
    <string name="salva">Save</string>
    <string name="title_activity_settings" translatable="false">Settings</string>
    <string name="opzioni">Options</string>
    <string name="desc_opt_geofencing">Geofencing</string>
    <string name="categoria_orari">Time Settings</string>
    <string name="categoria_geo">Location Settings</string>
    <string name="guest">Guest</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <!-- Strings related to Settings -->

    <!-- Example General settings -->
    <string name="pref_header_general" translatable="false">General</string>

    <string name="pref_title_social_recommendations" translatable="false">Enable social recommendations</string>
    <string name="pref_description_social_recommendations" translatable="false">Recommendations for people to contact
        based on your message history
    </string>

    <string name="pref_title_display_name" translatable="false">Display name</string>
    <string name="pref_default_display_name" translatable="false">John Smith</string>

    <string name="pref_title_add_friends_to_messages" translatable="false">Add friends to messages</string>
    <string-array name="pref_example_list_titles">
        <item>Always</item>
        <item>When possible</item>
        <item>Never</item>
    </string-array>
    <string-array name="pref_example_list_values">
        <item>1</item>
        <item>0</item>
        <item>-1</item>
    </string-array>

    <!-- Example settings for Data & Sync -->
    <string name="pref_header_data_sync" translatable="false">Data &amp; sync</string>

    <string name="pref_title_sync_frequency" translatable="false">Sync frequency</string>
    <string-array name="pref_sync_frequency_titles">
        <item>15 minutes</item>
        <item>30 minutes</item>
        <item>1 hour</item>
        <item>3 hours</item>
        <item>6 hours</item>
        <item>Never</item>
    </string-array>
    <string-array name="pref_sync_frequency_values">
        <item>15</item>
        <item>30</item>
        <item>60</item>
        <item>180</item>
        <item>360</item>
        <item>-1</item>
    </string-array>

    <string-array name="list_preference_entries">
        <item>Entry 1</item>
        <item>Entry 2</item>
        <item>Entry 3</item>
    </string-array>

    <string-array name="list_preference_entry_values">
        <item>1</item>
        <item>2</item>
        <item>3</item>
    </string-array>

    <string-array name="multi_select_list_preference_default_value" />

    <string name="pref_title_system_sync_settings" translatable="false">System sync settings</string>

    <!-- Example settings for Notifications -->
    <string name="pref_header_notifications" translatable="false">Notifications</string>

    <string name="pref_title_new_message_notifications" translatable="false">New message notifications</string>

    <string name="pref_title_ringtone" translatable="false">Ringtone</string>
    <string name="pref_ringtone_silent" translatable="false">Silent</string>

    <string name="pref_title_vibrate" translatable="false">Vibrate</string>
    <string name="set">Ok</string>
    <string name="cancel">Cancel</string>
    <string name="desc_th_geofencing">Geofencing Threshold</string>
    <string name="title_home">Titolo</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_notifications">Notifiche</string>
</resources>
