<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
xmlns:tools="http://schemas.android.com/tools"
android:layout_width="match_parent"
android:layout_height="match_parent"
android:background="@drawable/gradient"
tools:context="it.eng.workit.Dettaglio">

<LinearLayout
    android:id="@+id/dettaglio_bottoniera"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="horizontal"
    android:weightSum="3">

    <Button
        android:id="@+id/dettaglio_button"
        android:layout_width="0dp"
        android:layout_height="50dp"
        android:layout_marginBottom="0dp"
        android:layout_marginLeft="1dp"
        android:layout_marginRight="1dp"
        android:layout_marginTop="0dp"
        android:layout_weight="1"
        android:background="@drawable/button_left"
        android:shadowColor="@android:color/darker_gray"
        android:shadowDx="1"
        android:shadowDy="1"
        android:shadowRadius="3"
        android:text="@string/dettaglio"
        android:textColor="#ffffff"
        tools:ignore="ButtonStyle" />

    <Button
        android:id="@+id/dettaglio_button2"
        android:layout_width="0dp"
        android:layout_height="50dp"
        android:layout_margin="0dp"
        android:layout_weight="1"
        android:background="@drawable/button_middle"
        android:shadowColor="@android:color/darker_gray"
        android:shadowDx="1"
        android:shadowDy="1"
        android:shadowRadius="3"
        android:text="@string/cronologia"
        android:textColor="#ffffff"
        tools:ignore="ButtonStyle" />

    <Button
        android:id="@+id/dettaglio_button3"
        android:layout_width="0dp"
        android:layout_height="50dp"
        android:layout_marginBottom="0dp"
        android:layout_marginLeft="1dp"
        android:layout_marginRight="1dp"
        android:layout_marginTop="0dp"
        android:layout_weight="1"
        android:background="@drawable/button_right"
        android:shadowColor="@android:color/darker_gray"
        android:shadowDx="1"
        android:shadowDy="1"
        android:shadowRadius="3"
        android:text="@string/report"
        android:textColor="#ffffff"
        tools:ignore="ButtonStyle" />
</LinearLayout>


    <TextView
        android:id="@+id/dettaglio_data"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/dettaglio_bottoniera"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="42dp"
        android:shadowColor="@android:color/darker_gray"
        android:shadowDx="1"
        android:shadowDy="1"
        android:shadowRadius="3"
        android:text="@string/dummy_data"
        android:textAlignment="center"
        android:textColor="@android:color/background_light"
        android:textSize="24sp"
        android:textStyle="bold" />



    <TextView
        android:id="@+id/textView2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/entrata"
        android:textColor="@android:color/background_light"
        android:textSize="18sp"
        android:layout_alignBaseline="@+id/editText"
        android:layout_alignBottom="@+id/editText"
        android:layout_toLeftOf="@+id/editText"
        android:layout_toStartOf="@+id/editText" />

    <EditText
        android:id="@+id/editText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:ems="10"
        android:inputType="textPersonName"
        android:text="@string/dummy_in"
        android:layout_marginTop="29dp"
        android:layout_below="@+id/dettaglio_data"
        android:layout_alignLeft="@+id/dettaglio_data"
        android:layout_alignStart="@+id/dettaglio_data"
        android:layout_marginLeft="13dp"
        android:layout_marginStart="13dp" />


        <TextView
            android:id="@+id/dettaglio_textView3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/pausa"
            android:textColor="@android:color/background_light"
            android:textSize="18sp"
            android:layout_alignBaseline="@+id/editText2"
            android:layout_alignBottom="@+id/editText2"
            android:layout_toLeftOf="@+id/editText"
            android:layout_toStartOf="@+id/editText" />

        <EditText
            android:id="@+id/editText2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:ems="10"
            android:inputType="textPersonName"
            android:text="@string/dummy_pause"
            android:layout_below="@+id/editText"
            android:layout_alignLeft="@+id/editText"
            android:layout_alignStart="@+id/editText"
            android:layout_marginTop="16dp" />



        <TextView
            android:id="@+id/textView4"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/uscita"
            android:textColor="@android:color/background_light"
            android:textSize="18sp"
            android:layout_alignBaseline="@+id/editText4"
            android:layout_alignBottom="@+id/editText4"
            android:layout_alignRight="@+id/dettaglio_textView3"
            android:layout_alignEnd="@+id/dettaglio_textView3" />

        <EditText
            android:id="@+id/editText4"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:ems="10"
            android:inputType="textPersonName"
            android:text="@string/dummy_out"
            android:layout_marginTop="18dp"
            android:layout_below="@+id/editText2"
            android:layout_alignLeft="@+id/editText2"
            android:layout_alignStart="@+id/editText2" />


        <Button
            android:id="@+id/button5"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/salva"
            android:layout_alignParentBottom="true"
            android:layout_centerHorizontal="true"
            android:layout_marginBottom="32dp" />


</RelativeLayout>
