<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/gradient"
    tools:context="it.eng.workit.MainActivity">

    <LinearLayout
        android:id="@+id/bottoniera"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:weightSum="3">

        <Button
            android:id="@+id/button"
            android:layout_width="0dp"
            android:layout_height="50dp"
            android:layout_marginBottom="0dp"
            android:layout_marginLeft="1dp"
            android:layout_marginRight="1dp"
            android:layout_marginTop="0dp"
            android:layout_weight="1"
            android:background="@drawable/button_left"
            android:shadowColor="@android:color/darker_gray"
            android:shadowDx="1"
            android:shadowDy="1"
            android:shadowRadius="3"
            android:text="@string/dettaglio"
            android:textColor="#ffffff"
            android:onClick="showDettaglio"
            tools:ignore="ButtonStyle" />

        <Button
            android:id="@+id/button2"
            android:layout_width="0dp"
            android:layout_height="50dp"
            android:layout_margin="0dp"
            android:layout_weight="1"
            android:background="@drawable/button_middle"
            android:shadowColor="@android:color/darker_gray"
            android:shadowDx="1"
            android:shadowDy="1"
            android:shadowRadius="3"
            android:text="@string/cronologia"
            android:textColor="#ffffff"
            tools:ignore="ButtonStyle" />

        <Button
            android:id="@+id/button3"
            android:layout_width="0dp"
            android:layout_height="50dp"
            android:layout_marginBottom="0dp"
            android:layout_marginLeft="1dp"
            android:layout_marginRight="1dp"
            android:layout_marginTop="0dp"
            android:layout_weight="1"
            android:background="@drawable/button_right"
            android:shadowColor="@android:color/darker_gray"
            android:shadowDx="1"
            android:shadowDy="1"
            android:shadowRadius="3"
            android:text="@string/report"
            android:textColor="#ffffff"
            tools:ignore="ButtonStyle" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:weightSum="3">

        <EditText
            android:id="@+id/editText3"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="2"
            android:ems="10"
            android:inputType="textPersonName"
            android:text="@string/name"
            android:textColor="@android:color/background_light"
            android:textColorLink="@color/colorAccent"
            android:visibility="gone" />

        <Button
            android:id="@+id/button4"
            android:layout_width="0dp"
            android:layout_height="50dp"
            android:layout_margin="0dp"
            android:layout_marginBottom="0dp"
            android:layout_marginLeft="0dp"
            android:layout_marginRight="0dp"
            android:layout_marginTop="0dp"
            android:layout_weight="1"
            android:background="@drawable/button_alone"
            android:onClick="sendMessage"
            android:shadowColor="@android:color/darker_gray"
            android:shadowDx="1"
            android:shadowDy="1"
            android:shadowRadius="3"
            android:text="@string/show_message"
            android:textColor="#ffffff"
            android:textSize="12sp"
            android:visibility="gone" />
    </LinearLayout>

    <ImageView
        android:id="@+id/mImageView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_centerVertical="true"
        app:srcCompat="@drawable/pixel1"
        android:visibility="gone"
        android:contentDescription=""
        tools:ignore="ContentDescription" />


</RelativeLayout>
